--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -8,4 +8,13 @@
         <item name="colorAccent">@color/colorAccent</item>
     </style>
 
+    <style name="radios">
+        <item name="android:textColor">#FFFFFF</item>
+    </style>
+
+    <style name="tags">
+        <item name="android:padding">8dp</item>
+        <item name="android:textColor">#FFFFFF</item>
+    </style>
+
 </resources>
